# skanda

./: .gitignore  PFR_ARCHITECTURE.md  README.md  everythingpossible.md  results.tsv
pfr_engine/: Cargo.toml  generate_test_data.py
pfr_engine/data/: demonship.txt  physics.txt
pfr_engine/src/: bitset.rs  bridge.rs  compression.rs  fuzzy_search.rs  indexer.rs  lib.rs  main.rs  searcher.rs
skanda_engine/: Cargo.toml  README.md
skanda_engine/benches/: engine_bench.rs
skanda_engine/demo/: package-lock.json  package.json  server.js
skanda_engine/demo/public/: app.js  index.html  style.css
skanda_engine/src/: bktree.rs  bridge.rs  fuzzy_search.rs  indexer.rs  lib.rs  main.rs  searcher.rs  simd_search.rs  thread_pool.rs
