[package]
name = "skanda_engine"
version = "0.1.0"
edition = "2021"
description = "A zero-dependency, ultra-high-performance retrieval engine designed for the next generation of RAG."
authors = ["Deviprasad Shetty <deviprasadshetty400@gmail.complaining>"]
license = "MIT"
repository = "https://github.com/deviprasadshetty-dev/skanda.git"
readme = "README.md"
keywords = ["rag", "search", "engine", "retrieval", "simd"]
categories = ["text-processing", "database"]

[dependencies]
memmap2 = "0.9.10"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
criterion = "0.8.2"
# 0 heavy dependencies! Pure stdlib as much as possible.
  
[[bench]]  
name = "engine_bench"  
harness = false 
